# verhoviyaTEAM

./: LICENSE  README.md
.github/workflows/: build-packages.yml
WEB-AGENT/: .gitignore  CMakeLists.txt  README.md
WEB-AGENT/.github/workflows/: ci.yml
WEB-AGENT/config/: agent_config.example.json  agent_config.json
WEB-AGENT/deploy/launchd/: ru.web-agent.plist
WEB-AGENT/deploy/systemd/: web-agent.service
WEB-AGENT/deploy/windows/: install-service.ps1  uninstall-service.ps1
WEB-AGENT/docs/: api.md  deploy.md  options.md  options.schema.json  technical_spec.md
WEB-AGENT/src/: api_client.cpp  api_client.h  config.cpp  config.h  json.cpp  json.h  logger.cpp  logger.h  main.cpp  task_executor.cpp  task_executor.h
WEB-AGENT/tests/: CMakeLists.txt  test_environment.cpp
